--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jacobi.geolocationtest" >
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +18,4 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-permission
-        android:name="android.permission.ACCESS_FINE_LOCATION">
-    </uses-permission>
 </manifest>
